// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Space /> margin should apply Margin to child component 1`] = `
<div>
  <div
    class="Viewweb__View-sc-1cphyjf-0 ljAogI Spaceweb__Space-njatzl-0 XfsTT"
  >
    Flex Item
  </div>
</div>
`;

exports[`<Space /> padding should apply Padding to child component 1`] = `
<div>
  <div
    class="Viewweb__View-sc-1cphyjf-0 ljAogI Spaceweb__Space-njatzl-0 jqwxLT"
  >
    Flex Item
  </div>
</div>
`;
